--- a/app/src/main/res/layout/activity_conseils.xml
+++ b/app/src/main/res/layout/activity_conseils.xml
@@ -59,8 +59,8 @@
 
         <TextView
             android:id="@+id/textConseil"
-            android:layout_width="225dp"
-            android:layout_height="63dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="15px"
             android:text="Nos conseils"
             android:gravity="center"
