--- a/app/src/main/res/layout/activity_recherche_plat.xml
+++ b/app/src/main/res/layout/activity_recherche_plat.xml
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm"
-        app:icon="@drawable/plus_circle"
+        app:icon="@drawable/check_bold"
         app:backgroundTint="#4169F1"
         app:strokeColor="#000000"
         android:layout_gravity="center"
