--- a/app/src/main/res/layout/activity_ajout_plat.xml
+++ b/app/src/main/res/layout/activity_ajout_plat.xml
@@ -85,6 +85,21 @@ tools:context=".ajoutplat.AjoutPlat">
     android:textSize="20sp"
     android:text="Prendre une photo"/>
 
+    <Button
+        android:id="@+id/button_save_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center"
+        app:icon="@drawable/content_save"
+        app:backgroundTint="#6A6A6A"
+        app:strokeColor="#000000"
+        app:strokeWidth="2dp"
+        app:iconSize="40dp"
+        android:textSize="20sp"
+        android:text="Sauvegarder"/>
+
 
 <Button
     android:id="@+id/ajout_envoyer"
