--- a/app/src/main/res/layout/activity_parametres_black.xml
+++ b/app/src/main/res/layout/activity_parametres_black.xml
@@ -8,51 +8,11 @@
     android:layout_width="match_parent"
     android:background="#778899">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="80dp">
-
-        <RelativeLayout android:id="@+id/relativeLayout1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
-            android:background="#696969">
-
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/settings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="#4169F1"
-                app:fabSize="normal"
-                app:srcCompat="@drawable/cog"
-                app:tint="@color/black" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/home"
-                app:fabSize="normal"
-                app:backgroundTint="#4169F1"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="16dp"
-                app:tint="@color/black"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/app_name"
-                android:textColor="#FFFFFF"
-                android:textSize="40sp"
-                android:textStyle="bold" />
-
-        </RelativeLayout>
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/header"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textParametre"
