--- a/app/src/main/res/layout/activity_succes.xml
+++ b/app/src/main/res/layout/activity_succes.xml
@@ -11,54 +11,11 @@
         android:layout_height="match_parent"
         tools:context=".succes.Succes">
 
-        <LinearLayout
-            android:id="@+id/linearLayout2"
+        <FrameLayout
             android:layout_width="fill_parent"
-            android:layout_height="80dp"
-            tools:ignore="MissingConstraints">
-
-            <RelativeLayout
-                android:id="@+id/relativeLayout1"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:background="#4169F1">
-
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/settings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="16dp"
-                    app:backgroundTint="#FFFFFF"
-                    app:fabSize="normal"
-                    app:srcCompat="@drawable/cog"
-                    app:tint="#4169F1" />
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/home"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="16dp"
-                    app:backgroundTint="#FFFFFF"
-                    app:fabSize="normal"
-                    app:srcCompat="@drawable/home"
-                    app:tint="#4169F1" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="@string/app_name"
-                    android:textColor="#FFFFFF"
-                    android:textSize="40sp"
-                    android:textStyle="bold" />
-
-            </RelativeLayout>
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:id="@+id/header"
+            tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/AllSuccess"
