--- a/app/src/main/res/layout/activity_ajout_plat.xml
+++ b/app/src/main/res/layout/activity_ajout_plat.xml
@@ -18,7 +18,7 @@ tools:context=".ajoutplat.AjoutPlat">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        android:hint="Nom du plat à ajouter"
+        android:hint="Nom du plat"
         android:layout_gravity="center" />
 
 <ImageView
